# gic-etl

./: .gitignore  Makefile  PROBLEM_STATEMENT.md  README.md  atlas.hcl  pyproject.toml
config/: dev.yaml
migrations/: 20251106074140_external_funds.sql  20251110032309_pricing_views.sql  atlas.sum
reports/pricing_reconciliation_report/: .part-00000-24141d7d-19c6-45b0-ae62-a63a8260f1a2-c000.csv.crc  part-00000-24141d7d-19c6-45b0-ae62-a63a8260f1a2-c000.csv
src/: main.py
src/gic/: config.py
src/gic/constants/: column.py  table.py
src/gic/ingestion/: external_funds.py  job.py  parser.py
src/gic/report/: job.py  pricing.py
src/ingestion/: external_funds.py  parser.py
tests/: conftest.py
tests/data/external-funds/: Applebead.28-02-2023 breakdown.csv
tests/ingestion/: conftest.py  test_ingestion.py  test_parser.py
tests/ingestion/data/external-funds/: Magnum.28-02-2023.csv
tests/report/: conftest.py  test_pricing.py  test_report_generation.py
