[project]
name = "gic-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Khor Shu Heng",email = "shuheng.khor@thoughtworks.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=4.0.1,<5.0.0)",
]

[tool.mypy]
explicit_package_bases = true
files = ["src", "tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
