[project]
name = "gic"
version = "0.1.0"
description = ""
authors = [
    {name = "Khor Shu Heng",email = "shuheng.khor@thoughtworks.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=4.0.1,<5.0.0)",
    "pydantic (>=2.12.4)",
    "pyyaml (>=6.0.3,<7.0.0)",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
    "tests",
]
markers = [
    "integration"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]
